--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ header {
 .hero-box {
     width: 100%;
     min-height: 1000px;
-    background:url(../pics/africanchild.jpg);
+    background:url(../africanchild.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
